--- a/mokashime2/index.html
+++ b/mokashime2/index.html
@@ -16,7 +16,7 @@
       <nav>
         <ui>
           <li><a href="#intr">Introduction</a></li>
-          <li>News</li>
+          <li>News!!!</li>
           <li>SNS</li>
         </ui>
       </nav>
