--- a/mokashime2/index.html
+++ b/mokashime2/index.html
@@ -1,82 +1,28 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name=”viewport” content=”width=device-width, initial-scale=1″>
+    <meta name=”viewport” content=”width=device-width", initial-scale="1″>
     <title>MokaShime Diary</title>
     <meta name="description" content="two border collies ,Moka and Shimeji's slow life">
-    <link rel="stylesheet" href="stylesheet/index.css">
+    <!--<link rel="stylesheet" href="stylesheet/index.css">-->
   </head>
 
   <body>
-
-    <header id="top">
-      <h1>MokaShime Diary</h1><!--for Logo-->
-      <nav>
-        <ui>
-          <li><a href="#intr">Introduction</a></li>
-          <li>News!!!</li>
-          <li>SNS</li>
-        </ui>
-      </nav>
-
-      <div id="ttl">
-        MokaShime Diary
-      </div>
+    <header>
+      <a href="moka-page.html">Moka</a>
+      <a href="shimeji-page.html">Shimeji</a>
+      <a href="picture-page">Pictures</a>
+      <a href="video-page">Videos</a>
+      <a href="share-page">Share</a>
     </header>
-
     <main>
-
-
-      <article>
-        <div class="paragraph" id="intr">
-          Introduction
-        </div>
-
-        <div class="parent">
-          <a href="moka-page.html" class="intro">
-            <img src="resources/pic-moka.png" alt="moka"
-            width="100px" height="100px">
-          </a>
-          <a href="shimeji-page.html" class="intro">
-            <img src="resources/pic-shimeji.png" alt="shimeji"
-            width="100px" height="100px">
-          </a>
-          <a href="shimeji-page.html" class="intro">
-            <img src="resources/pic-rio.png" alt="shimeji"
-            width="100px" height="100px">
-          </a>
-          <a href="shimeji-page.html" class="intro">
-            <img src="resources/pic-anu.png" alt="shimeji"
-            width="100px" height="100px">
-          </a>
-          <a href="shimeji-page.html" class="intro">
-            <img src="resources/pic-danro.png" alt="shimeji"
-            width="100px" height="100px">
-          </a>
-
-        </div>
-
-      </article>
-
-
-      <article>
-        <div class="paragraph">
-          News
-        </div>
-      </article>
-
-
-      <article>
-        <p>twitter</p>
-        <p>line</p>
-      </article>
+      <div class="image_container">
+        <img src="resources/mokashime.jpg" width="100%" height="auto">
+        <h2>MokaShimeji Blog</h2>
+      </div>
     </main>
-
     <footer>
-      <div><a href="#top">Back to Top</a></div>
-
     </footer>
   </body>
 
