--- a/mokashime2/moka-page.html
+++ b/mokashime2/moka-page.html
@@ -5,7 +5,7 @@
     <title>about Moka</title>
     <meta charset="utf-8">
     <meta name="description" content="introduction about Moka">
-    <link rel="stylesheet" href="stylesheet/moka-page.css">
+    <link rel="stylesheet" href="css/moka-page.css">
   </head>
 
   <body>
