--- a/mokashime2/index.html
+++ b/mokashime2/index.html
@@ -5,16 +5,22 @@
     <meta name=”viewport” content=”width=device-width", initial-scale="1″>
     <title>MokaShime Diary</title>
     <meta name="description" content="two border collies ,Moka and Shimeji's slow life">
-    <!--<link rel="stylesheet" href="stylesheet/index.css">-->
+    <link rel="stylesheet" href="css/index.css">
   </head>
 
   <body>
     <header>
-      <a href="moka-page.html">Moka</a>
-      <a href="shimeji-page.html">Shimeji</a>
-      <a href="picture-page">Pictures</a>
-      <a href="video-page">Videos</a>
-      <a href="share-page">Share</a>
+      <nav>
+        <ul>
+          <li><a href="moka-page.html">Moka</a></li>
+          <li><a href="shimeji-page.html">Shimeji</a></li>
+          <li><a href="picture-page">Pictures</a></li>
+          <li><a href="video-page">Videos</a></li>
+          <li><a href="share-page">Share</a></li>
+        </ul>
+
+      </nav>
+      
     </header>
     <main>
       <div class="image_container">
