--- a/mokashime2/index.html
+++ b/mokashime2/index.html
@@ -9,29 +9,22 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="moka-page.html">Moka</a></li>
-          <li><a href="shimeji-page.html">Shimeji</a></li>
-          <li><a href="picture-page">Pictures</a></li>
-          <li><a href="video-page">Videos</a></li>
-          <li><a href="share-page">Share</a></li>
-        </ul>
-
-      </nav>
-      
+    <header class="site-header">
+      <h2 class="header-title">MokaShimeji Blog</h2>
+      <ul class="header-navigation">
+        <li><a href="moka-page.html">Moka</a></li>
+        <li><a href="shimeji-page.html">Shimeji</a></li>
+        <li><a href="picture-page">Pictures</a></li>
+        <li><a href="video-page">Videos</a></li>
+        <li><a href="share-page">Share</a></li>
+      </ul>
     </header>
     <main>
       <div class="image_container">
         <img src="resources/mokashime.jpg" width="100%" height="auto">
-        <h2>MokaShimeji Blog</h2>
       </div>
     </main>
     <footer>
     </footer>
   </body>
-
-
-
 </html>
